--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           # IMPORTANT: Replace 'YOUR_IAM_ROLE_ARN_GOES_HERE' with the actual ARN of your IAM role from AWS!
-          role-to-assume: arn:aws:iam::760715349705:role/haha
+          role-to-assume: arn:aws:iam::760715349705:role/poda-thendi
           # This must be the AWS region where your SES sender identity is verified.
           aws-region: us-east-1 # Example: us-east-1
 
