--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,16 @@ on:
   push:
     branches:
       - main
-  pull_request:
+permissions:
+ id-token: write
+ contents: read
   
 env:
   IMAGE_NAME: ${{ github.repository }}
   REGISTRY: docker.io
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+
 
 jobs:
   build:
