--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ env:
   REGISTRY: docker.io
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-
+  
 
 jobs:
   build:
@@ -98,9 +98,7 @@ jobs:
         run: |
           docker build -t $IMAGE_NAME:latest -t $IMAGE_NAME:${{ github.sha }} .
       - name: Push Docker image
-        run: |
-          docker push $IMAGE_NAME:latest
-          docker push $IMAGE_NAME:${{ github.sha }}
+        run: docker push $IMAGE_NAME:latest
 
   ses-notification:
     needs: [build, push]
