--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ permissions:
  contents: read
   
 env:
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: bhuvanraj123/akshay
   REGISTRY: docker.io
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
